# kamtoa-simulation

./: README.md  backup_code.cpp  instruction  old_code
kamtoa/kamtoa_base/: CMakeLists.txt  package.xml
kamtoa/kamtoa_description/: CMakeLists.txt  urdf.rviz
kamtoa/kamtoa_teleop/: package.xml
kamtoa_base/launch/: icreate_base.launch  som_o_base.launch
kamtoa_base/params/: laser_filter_config.yaml
kamtoa_bringup/: package.xml
kamtoa_bringup/config/: new_ground_station.perspective  rviz.rviz
kamtoa_bringup/launch/: base_bringup.launch  base_bringup_dual_cam.launch  base_gmapping.launch  calibrate.launch  ground_station.launch  icreate_pure_base.launch  icreate_self_teleop.launch  laser_scan_matcher.launch  robot_localization.launch
kamtoa_costmap/: CMakeLists.txt  gradient_layer_plugin.xml  package.xml
kamtoa_costmap/src/: gradient_layer.cpp  gradient_layer.h
kamtoa_deprecated/kamtoa_bringup/: CMakeLists.txt
kamtoa_deprecated/kamtoa_description/: package.xml
kamtoa_deprecated/kamtoa_web_server/: CMakeLists.txt  package.xml
kamtoa_deprecated/som_o_driver/: CMakeLists.txt  package.xml
kamtoa_description/: urdf.rviz
kamtoa_description/launch/: gazebo.launch  gazebo_joystick.launch  gazebo_keyboard.launch  kamtoa_empty.launch  view_static_robot.launch
kamtoa_description/urdf/: camera.xacro  constant.xacro  diff_drive_plugin.xacro  hokuyo.xacro  kamtoa_robot.xacro  material.xacro
kamtoa_gazebo/: CMakeLists.txt  package.xml
kamtoa_gazebo/launch/: gazebo_kamtoa.launch  gazebo_keyboard.launch  gazebo_robot.launch  gazebo_som_o.launch  kamtoa_world.launch  world.launch
kamtoa_gazebo/world/: building1.world  whiz_ex_decorated.world  whiz_ex_decorated_light.world
kamtoa_global_planner/: CMakeLists.txt  kamtoa_global_planner_plugin.xml  package.xml
kamtoa_global_planner/src/: kamtoa_global_planner.cpp  kamtoa_global_planner.h
kamtoa_map_manager/: CMakeLists.txt  package.xml  plugin_description.xml
kamtoa_map_manager/include/kamtoa_map_manager/: fileReader.hpp  poiManager.hpp  poi_manager_panel.hpp  pointTransporter.hpp
kamtoa_map_manager/launch/: map_manager.launch
kamtoa_map_manager/msg/: poi.msg  poiList.msg
kamtoa_map_manager/src/: mapSemantics.cpp  map_accessor.cpp  map_localizer.cpp  map_poi_manager_widget.cpp  opencvtest.cpp  poiManager.cpp  poi_manager_panel.cpp  pointTransporter.cpp
kamtoa_map_manager/srv/: listPoi.srv  loadPoi.srv  resolvePoi.srv
kamtoa_navigation/: CMakeLists.txt  package.xml
kamtoa_navigation/launch/: kamtoa_navigation.launch  map_server.launch
kamtoa_navigation/maps/: 6_floor.yaml  ab-connect.pgm  ab-connect.yaml  ac-connect.pgm  ba-connect.pgm  ca-essence.pgm  cb-essence.yaml  skycafe2.pgm  skycafe2.yaml  whiz-ex.yaml
kamtoa_navigation/src/: mapSemantic_manager.cpp  mapSemantics.cpp  pointTransporter.cpp  pub.cpp  waypoint_navigator.cpp
kamtoa_navigation/waypoints/: waypoint.csv  waypoint_dumbobot.csv  waypoint_whiz_ex.yaml
kamtoa_opencv_map_tools/: CMakeLists.txt  package.xml
kamtoa_smarthome_controller/: CMakeLists.txt  package.xml
kamtoa_smarthome_controller/msg/: smarthome_action.msg  smarthome_response.msg
kamtoa_smarthome_controller/src/: gazebo_light_controller.cpp
kamtoa_teleop/: .create_launch.launch.swp  CMakeLists.txt
kamtoa_teleop/launch/: teleop_joystick.launch  teleop_joystick_1scale.launch  teleop_keyboard.launch  teleop_repeated_joystick.launch
kamtoa_teleop/script/: kamtoa_keyboard.py
kamtoa_teleop/scripts/: kamtoa_keyboard.py
kamtoa_teleop/src/: kamtoa_joystick.cpp
kamtoa_velocity_profile/: CMakeLists.txt  package.xml
kamtoa_velocity_profile/launch/: profiled_controller.launch
kamtoa_velocity_profile/src/: publisher.cpp  velocity_profiler.cpp
kamtoa_web_server/example/: tutorial.html
mali_description/: CMakeLists.txt  package.xml
relaxed_astar/: CMakeLists.txt  package.xml  relaxed_astar_planner_plugin.xml
som_o_base/: CMakeLists.txt  package.xml
som_o_bringup/: CMakeLists.txt  package.xml
som_o_controller/: CMakeLists.txt  package.xml
som_o_description/: CMakeLists.txt  package.xml  urdf.rviz
som_o_driver/: CMakeLists.txt  package.xml
som_o_gazebo/: CMakeLists.txt  package.xml
som_o_mavlink/: CMakeLists.txt  package.xml  setup.py
som_o_mavlink/launch/: gcs_server.launch  mavlink_server.launch
som_o_mavlink/script/: consumer.py  mavlink_command_manager.py  mavlink_executor.py  mavlink_heartbeat.py  mavlink_interface.py  mavlink_mission_manager.py  mavlink_robot_odom.py  mavlink_status_manager.py  mavlink_telemetry.py  mavlink_waypoint.py  mavlink_waypoint_manager.py  testInterface.py  utils.py  waypoint_manager.py  waypoints.wp
som_o_mavlink/script/custom_util/: movebasestatus.py  waypoint.py
som_o_navigation/: CMakeLists.txt  package.xml
som_o_navigation/launch/real_module/: amcl.launch.xml  move_base.launch.xml  nav.launch  velocity_smoother.launch.xml
som_o_navigation/launch/real_module/backup/: amcl.launch.backup
som_o_navigation/launch/sim_module/: amcl.launch.xml  move_base.launch.xml  sim_nav.launch  velocity_smoother.launch.xml
som_o_navigation/maps/: 611.yaml  aa-essence.pgm  aa-essence.yaml  ac-connect.yaml  ba-connect.yaml  ca-essence.yaml  cb-essence.pgm  dtgo.pgm  dtgo.yaml  fin.pgm  fin.yaml  hg.pgm  hg.yaml  labnew.pgm  labnew.yaml  mapping.map  project_l_floor1.pgm  project_l_floor1.yaml  sim_world.pgm  sim_world.yaml  whiz-ex.pgm
som_o_navigation/param/som_o/: move_base_params.yaml  smoother.yaml
som_o_navigation/param/som_o/amcl/: amcl.yaml
som_o_navigation/param/som_o/costmap/: global_costmap_params.yaml  local_costmap_params.yaml  only_global_params.yaml  only_local_params.yaml
som_o_navigation/param/som_o/planner/: dwa_local_planner_params.yaml
som_o_navigation/param/som_o_sim/: move_base_params.yaml  smoother.yaml
som_o_navigation/param/som_o_sim/costmap/: global_costmap_params.yaml  only_global_params.yaml
som_o_navigation/param/som_o_sim/planner/: dwa_local_planner_params.yaml  global_planner_params.yaml
som_o_navigation/waypoints/: waypoint.csv
som_o_ros/: CMakeLists.txt  package.xml
(+181 files in other folders)
